--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -568,3 +568,71 @@
 	
 }
 
+Кнопки имеют следующие свойства CSS:
+
+{ <--- всегда.
+
+width: 200px; <--- ширина 200 пикселей.
+
+height: 33px; <--- высота 33 пикселя.
+
+border-radius: 7px; <--- радиус 7 пикселей.
+
+color: #35cece; <--- цвет (#35cece).
+
+margin-top: 3%; <--- внешний отступ сверху вниз 3%.
+
+margin-left: 33%; <--- внешний отступ слева направо.
+
+background-color: #4b4ee5; <--- цвет заднего фона (#4b4ee5).
+
+outline: none; <--- убирает цвет, стиль и ширину внешней границы.
+
+box-shadow: 0 0 20px #0004ff; <--- тень 20 пикселей этого цвета (#0004ff).
+
+border: 1px solid #9347e5; <--- рамка 1 пиксель сплошный этот цвет (#9347e5).
+
+cursor: pointer; <--- при наведении делает мышку лапкой как при наведении на ссылки.
+
+font-weight: bold; <--- насыщенность шрифта жирный.
+}
+
+{ <--- по нажатию.
+
+background-color: #0700ed; <--- цвет заднего фона (#0700ed).
+
+color: white; <---  цвет белый.
+}
+
+{ <--- при наведении.
+
+box-shadow: 0 0 20px #c7f400; <--- тень 20 пикселей этого цвета (#c7f400).
+}
+
+Для текстовых строк используются следующие свойства CSS:
+
+{
+
+width: 400px; <--- ширина 400 пикселей.
+
+height: 33px; <--- высота 33 пикселя.
+
+border-radius: 3px; <--- радиус 3 пикселя.
+
+margin-left: 33%; <--- внешний отступ слева направо 33%.
+
+margin-top: 1%; <--- внешний отступ сверху вниз 1 пиксель.
+
+border: 1px solid blue; <--- рамка 1 пиксель сплошный синий цвет.
+
+text-align: center; <---  текст в центре. 
+
+display: block; <--- блочный элемент.
+
+box-shadow: 0 0 30px #00ff5d; <--- тень 30 пикселей.
+
+color: #4b4ee5; <--- цвет (#4b4ee5).
+
+font-weight: bold; <--- насыщенность шрифта жирный.
+}
+
