--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -572,7 +572,25 @@
 
 {
 
-1
+	height: 33px;
+	
+	border-radius: 7px;
+	
+	color: #35cece;
+	
+	background-color: #4b4ee5;
+	
+	outline: none;
+	
+	box-shadow: 0 0 20px #0004ff;
+	
+	border: 1px solid #9347e5;
+	
+	cursor: pointer;
+	
+	font-weight: bold;
+	
+	margin-left: 89%;
 
 }
 
