--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -570,27 +570,68 @@
 
 Кнопки имеют следующие свойства CSS:
 
-{
+{ <--- всегда.
 
-	height: 33px;
+	height: 33px; <--- высота 33 пикселя.
 	
-	border-radius: 7px;
+	border-radius: 7px; <--- радиус 7 пикселей.
 	
-	color: #35cece;
+	color: #35cece; <--- цвета символов "#35cece".
 	
-	background-color: #4b4ee5;
+	background-color: #4b4ee5; <--- цвет заднего фона "#4b4ee5".
 	
-	outline: none;
+	outline: none; <--- убирает цвет, стиль и ширину внешней границы.
 	
-	box-shadow: 0 0 20px #0004ff;
+	box-shadow: 0 0 20px #0004ff; <--- тень 20 пикселей этого цвета "#0004ff".
 	
-	border: 1px solid #9347e5;
+	border: 1px solid #9347e5; <--- рамка 1 пиксель сплошный цвет "#9347e5".
 	
-	cursor: pointer;
+	cursor: pointer; <--- при наведении делает мышку лапкой как при наведении на ссылки.
 	
-	font-weight: bold;
+	font-weight: bold; <--- насыщенность шрифта жирный.
 	
-	margin-left: 89%;
+	margin-left: 89%; <--- внешний отступ слева направо 89%.
 
 }
 
+{ <--- по нажатию
+
+	background-color: #0700ed; <--- цвета заднего фона "#0700ed".
+	color: white; <--- цвет символов белый.
+	
+}
+
+{ <--- при наведении.
+
+	box-shadow: 0 0 20px #c7f400; <--- тень 20 пикселей этого цвета "#c7f400".
+	
+}
+
+Для текстовых строк используются следующие свойства CSS:
+
+{
+
+	width: 400px; <--- ширина 400 пикселей.
+	
+	height: 33px; <--- высота 33 пикселя.
+	
+	border-radius: 3px; <--- радиус 3 пикселя.
+	
+	margin-left: 33%; <--- внешний отступ слева направо 33%.
+	
+	margin-top: 1%; <--- внешний отступ сверху вниз 1 пиксель.
+	
+	border: 1px solid blue; <--- рамка 1 пиксель сплошный синий цвет.
+	
+	text-align: center; <---  текст в центре. 
+	
+	display: block; <--- блочный элемент.
+	
+	box-shadow: 0 0 30px #00ff5d; <--- тень 30 пикселей.
+	
+	color: #4b4ee5; <--- цвет (#4b4ee5).
+	
+	font-weight: bold; <--- насыщенность шрифта жирный.
+	
+}
+## Заключение.
