--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -635,3 +635,17 @@
 	
 }
 ## Заключение.
+В процессе разработки проекта были решены следующие задачи:
+•	сформулирована задача;
+•	изучена предметная область;
+•	рассмотрены аналогичные решения;
+•	разработано техническое задание на разработку;
+•	проведена экономическая оценка;
+•	разработан программный продукт;
+•	сформировано техническое описание разработки;
+Таким образом, задачи, поставленные в рамках разработки дипломного проекта, выполнены. Все поставленные цели достигнуты.
+### Список использованных источников.
+1.Справочник JavaScript: [Электронный ресурс]URL:https://developer.mozilla.org/ru/docs/Web/JavaScript
+2.Справочник JavaScript: [Электронный ресурс]URL:https://learn.javascript.ru
+3.Справочник JavaScript: [Электронный ресурс]URL:https://javascript.ru
+4.Реальный аналог моего сайта: [Электронный ресурс]URL:http://www.fuckgrechka.ru/tzlvt/
