--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -653,3 +653,12 @@
 
 4.Реальный аналог моего сайта: [Электронный ресурс]URL:http://www.fuckgrechka.ru/tzlvt/
 
+Ниже приведены скриншоты использования интернет-ресурса, представлены основные функции и интерфейсы пользователя.
+
+Главная страница интернет-ресурса, точка входа (рисунок П4.1) 
+
+Регистрация (рисунок П4.2)
+
+Вход в сеть (рисунок П4.3)
+
+Страница с отзывами выпускников и студентов факультета (рисунок П4.4)
