--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -663,4 +663,4 @@
 
 Вход в сеть (рисунок П4.3)
 
-Страница с отзывами выпускников и студентов факультета (рисунок П4.4)
+Приложение (рисунок П4.4)
