--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -653,11 +653,7 @@
 
 4.Реальный аналог моего сайта: [Электронный ресурс]URL:http://www.fuckgrechka.ru/tzlvt/
 
-
-
-
-
-Ниже приведены скриншоты использования интернет-ресурса, представлены основные функции и интерфейсы пользователя.
+### Ниже приведены скриншоты использования интернет-ресурса, представлены основные функции и интерфейсы пользователя.
 
 Главная страница интернет-ресурса, точка входа (рисунок П4.1) 
 
