--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -655,10 +655,10 @@
 
 ### Ниже приведены скриншоты использования интернет-ресурса, представлены основные функции и интерфейсы пользователя.
 
-Главная страница интернет-ресурса, точка входа (рисунок П4.1) 
+Главная страница интернет-ресурса, точка входа (рисунок 1.png) 
 
-Регистрация (рисунок П4.2)
+Регистрация (рисунок 2.png)
 
-Вход в сеть (рисунок П4.3)
+Вход в сеть (рисунок 3.png)
 
-Приложение (рисунок П4.4)
+Приложение (рисунок 4.png)
