--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -655,10 +655,10 @@
 
 ### Ниже приведены скриншоты использования интернет-ресурса, представлены основные функции и интерфейсы пользователя.
 
-Главная страница интернет-ресурса, точка входа (рисунок 1.png) 
+Главная страница интернет-ресурса, точка входа (рисунок П.1) 
 
-Регистрация (рисунок 2.png)
+Регистрация (рисунок П.2)
 
-Вход в сеть (рисунок 3.png)
+Вход в сеть (рисунок П.3)
 
-Приложение (рисунок 4.png)
+Приложение (рисунок П.4)
