--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -1,3 +1,5 @@
+## Введение.
+
 ## Предметная область:
 Деньги не бесконечны.
 Приложение показывает, сколько стоит потратить сегодня, а сколько оставить на завтра.
