--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -1,5 +1,31 @@
 ## Введение.
+Здравствуйте, я Кардаильский Алексей, работающий над этим проектом и сейчас я проведу вам экскурсию по этому проекту.
+Я Выбрал тему расчёта бюджета, потому что эта тема мне наиболее понятна и интересна, а так же она имеет сложность 3/3.
+### В этой экскурсии вы прочтёте:
 
+1. Предметная область
+
+2. Функционал проекта.
+
+ 2.1. О регестрации и входе в сеть.
+
+ 2.2. О самом приложении.
+ 
+3. Описание программного кода.
+
+ 3.1. Главная страница.
+
+ 3.2. Регистрация.
+
+ 3.3. Вход в сеть.
+
+ 3.4. Приложение.
+ 
+4. Заключение.
+
+ 4.1. Список использованных источников.
+ 
+ 4.2. Скриншоты частей сайта.
 ## Предметная область:
 Деньги не бесконечны.
 Приложение показывает, сколько стоит потратить сегодня, а сколько оставить на завтра.
