--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -3,7 +3,7 @@
 Я Выбрал тему расчёта бюджета, потому что эта тема мне наиболее понятна и интересна, а так же она имеет сложность 3/3.
 ### В этой экскурсии вы прочтёте:
 
-1. Предметная область
+1. Предметная область.
 
 2. Функционал проекта.
 
