--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -91,7 +91,7 @@
 
 Для кнопки используются такие свойства CSS как:
 
-{
+{ <--- всегда
 
     margin-left: 35%; <--- внешний отступ слева направо 35%.
     
